feat: add attendance crud
