# shared/proto/employee-service/models/attendance.pb.go
@@ -1,0 +1,204 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.6
+// 	protoc        v4.25.3
+// source: employee-service/models/attendance.proto
+
+package models
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	timestamppb "google.golang.org/protobuf/types/known/timestamppb"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type Attendance struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Id            string                 `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	TimeIn        *timestamppb.Timestamp `protobuf:"bytes,2,opt,name=timeIn,proto3" json:"timeIn,omitempty"`
+	EmployeeId    int64                  `protobuf:"varint,3,opt,name=employeeId,proto3" json:"employeeId,omitempty"`
+	EmployeeName  string                 `protobuf:"bytes,4,opt,name=employeeName,proto3" json:"employeeName,omitempty"`
+	ActionId      int64                  `protobuf:"varint,5,opt,name=actionId,proto3" json:"actionId,omitempty"`
+	ActionName    string                 `protobuf:"bytes,6,opt,name=actionName,proto3" json:"actionName,omitempty"`
+	DeviceId      int64                  `protobuf:"varint,7,opt,name=deviceId,proto3" json:"deviceId,omitempty"`
+	DeviceName    string                 `protobuf:"bytes,8,opt,name=deviceName,proto3" json:"deviceName,omitempty"`
+	Precision     float64                `protobuf:"fixed64,9,opt,name=precision,proto3" json:"precision,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *Attendance) Reset() {
+	*x = Attendance{}
+	mi := &file_employee_service_models_attendance_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *Attendance) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Attendance) ProtoMessage() {}
+
+func (x *Attendance) ProtoReflect() protoreflect.Message {
+	mi := &file_employee_service_models_attendance_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Attendance.ProtoReflect.Descriptor instead.
+func (*Attendance) Descriptor() ([]byte, []int) {
+	return file_employee_service_models_attendance_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *Attendance) GetId() string {
+	if x != nil {
+		return x.Id
+	}
+	return ""
+}
+
+func (x *Attendance) GetTimeIn() *timestamppb.Timestamp {
+	if x != nil {
+		return x.TimeIn
+	}
+	return nil
+}
+
+func (x *Attendance) GetEmployeeId() int64 {
+	if x != nil {
+		return x.EmployeeId
+	}
+	return 0
+}
+
+func (x *Attendance) GetEmployeeName() string {
+	if x != nil {
+		return x.EmployeeName
+	}
+	return ""
+}
+
+func (x *Attendance) GetActionId() int64 {
+	if x != nil {
+		return x.ActionId
+	}
+	return 0
+}
+
+func (x *Attendance) GetActionName() string {
+	if x != nil {
+		return x.ActionName
+	}
+	return ""
+}
+
+func (x *Attendance) GetDeviceId() int64 {
+	if x != nil {
+		return x.DeviceId
+	}
+	return 0
+}
+
+func (x *Attendance) GetDeviceName() string {
+	if x != nil {
+		return x.DeviceName
+	}
+	return ""
+}
+
+func (x *Attendance) GetPrecision() float64 {
+	if x != nil {
+		return x.Precision
+	}
+	return 0
+}
+
+var File_employee_service_models_attendance_proto protoreflect.FileDescriptor
+
+const file_employee_service_models_attendance_proto_rawDesc = "" +
+	"\n" +
+	"(employee-service/models/attendance.proto\x12\"employee_service.models.attendance\x1a\x1fgoogle/protobuf/timestamp.proto\"\xaa\x02\n" +
+	"\n" +
+	"Attendance\x12\x0e\n" +
+	"\x02id\x18\x01 \x01(\tR\x02id\x122\n" +
+	"\x06timeIn\x18\x02 \x01(\v2\x1a.google.protobuf.TimestampR\x06timeIn\x12\x1e\n" +
+	"\n" +
+	"employeeId\x18\x03 \x01(\x03R\n" +
+	"employeeId\x12\"\n" +
+	"\femployeeName\x18\x04 \x01(\tR\femployeeName\x12\x1a\n" +
+	"\bactionId\x18\x05 \x01(\x03R\bactionId\x12\x1e\n" +
+	"\n" +
+	"actionName\x18\x06 \x01(\tR\n" +
+	"actionName\x12\x1a\n" +
+	"\bdeviceId\x18\a \x01(\x03R\bdeviceId\x12\x1e\n" +
+	"\n" +
+	"deviceName\x18\b \x01(\tR\n" +
+	"deviceName\x12\x1c\n" +
+	"\tprecision\x18\t \x01(\x01R\tprecisionBEZCgithub.com/nicodanke/gesty-api/shared/proto/employee-service/modelsb\x06proto3"
+
+var (
+	file_employee_service_models_attendance_proto_rawDescOnce sync.Once
+	file_employee_service_models_attendance_proto_rawDescData []byte
+)
+
+func file_employee_service_models_attendance_proto_rawDescGZIP() []byte {
+	file_employee_service_models_attendance_proto_rawDescOnce.Do(func() {
+		file_employee_service_models_attendance_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_employee_service_models_attendance_proto_rawDesc), len(file_employee_service_models_attendance_proto_rawDesc)))
+	})
+	return file_employee_service_models_attendance_proto_rawDescData
+}
+
+var file_employee_service_models_attendance_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_employee_service_models_attendance_proto_goTypes = []any{
+	(*Attendance)(nil),            // 0: employee_service.models.attendance.Attendance
+	(*timestamppb.Timestamp)(nil), // 1: google.protobuf.Timestamp
+}
+var file_employee_service_models_attendance_proto_depIdxs = []int32{
+	1, // 0: employee_service.models.attendance.Attendance.timeIn:type_name -> google.protobuf.Timestamp
+	1, // [1:1] is the sub-list for method output_type
+	1, // [1:1] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_employee_service_models_attendance_proto_init() }
+func file_employee_service_models_attendance_proto_init() {
+	if File_employee_service_models_attendance_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_employee_service_models_attendance_proto_rawDesc), len(file_employee_service_models_attendance_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_employee_service_models_attendance_proto_goTypes,
+		DependencyIndexes: file_employee_service_models_attendance_proto_depIdxs,
+		MessageInfos:      file_employee_service_models_attendance_proto_msgTypes,
+	}.Build()
+	File_employee_service_models_attendance_proto = out.File
+	file_employee_service_models_attendance_proto_goTypes = nil
+	file_employee_service_models_attendance_proto_depIdxs = nil
+}
