# shared/proto/employee-service/requests/attendance/rpc_delete_attendance.pb.go
@@ -1,0 +1,122 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.6
+// 	protoc        v4.25.3
+// source: employee-service/requests/attendance/rpc_delete_attendance.proto
+
+package attendance
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type DeleteAttendanceRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Id            string                 `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *DeleteAttendanceRequest) Reset() {
+	*x = DeleteAttendanceRequest{}
+	mi := &file_employee_service_requests_attendance_rpc_delete_attendance_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *DeleteAttendanceRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*DeleteAttendanceRequest) ProtoMessage() {}
+
+func (x *DeleteAttendanceRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_employee_service_requests_attendance_rpc_delete_attendance_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use DeleteAttendanceRequest.ProtoReflect.Descriptor instead.
+func (*DeleteAttendanceRequest) Descriptor() ([]byte, []int) {
+	return file_employee_service_requests_attendance_rpc_delete_attendance_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *DeleteAttendanceRequest) GetId() string {
+	if x != nil {
+		return x.Id
+	}
+	return ""
+}
+
+var File_employee_service_requests_attendance_rpc_delete_attendance_proto protoreflect.FileDescriptor
+
+const file_employee_service_requests_attendance_rpc_delete_attendance_proto_rawDesc = "" +
+	"\n" +
+	"@employee-service/requests/attendance/rpc_delete_attendance.proto\x126employee_service.requests.attendance.delete_attendance\")\n" +
+	"\x17DeleteAttendanceRequest\x12\x0e\n" +
+	"\x02id\x18\x01 \x01(\tR\x02idBRZPgithub.com/nicodanke/gesty-api/shared/proto/employee-service/requests/attendanceb\x06proto3"
+
+var (
+	file_employee_service_requests_attendance_rpc_delete_attendance_proto_rawDescOnce sync.Once
+	file_employee_service_requests_attendance_rpc_delete_attendance_proto_rawDescData []byte
+)
+
+func file_employee_service_requests_attendance_rpc_delete_attendance_proto_rawDescGZIP() []byte {
+	file_employee_service_requests_attendance_rpc_delete_attendance_proto_rawDescOnce.Do(func() {
+		file_employee_service_requests_attendance_rpc_delete_attendance_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_employee_service_requests_attendance_rpc_delete_attendance_proto_rawDesc), len(file_employee_service_requests_attendance_rpc_delete_attendance_proto_rawDesc)))
+	})
+	return file_employee_service_requests_attendance_rpc_delete_attendance_proto_rawDescData
+}
+
+var file_employee_service_requests_attendance_rpc_delete_attendance_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_employee_service_requests_attendance_rpc_delete_attendance_proto_goTypes = []any{
+	(*DeleteAttendanceRequest)(nil), // 0: employee_service.requests.attendance.delete_attendance.DeleteAttendanceRequest
+}
+var file_employee_service_requests_attendance_rpc_delete_attendance_proto_depIdxs = []int32{
+	0, // [0:0] is the sub-list for method output_type
+	0, // [0:0] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_employee_service_requests_attendance_rpc_delete_attendance_proto_init() }
+func file_employee_service_requests_attendance_rpc_delete_attendance_proto_init() {
+	if File_employee_service_requests_attendance_rpc_delete_attendance_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_employee_service_requests_attendance_rpc_delete_attendance_proto_rawDesc), len(file_employee_service_requests_attendance_rpc_delete_attendance_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_employee_service_requests_attendance_rpc_delete_attendance_proto_goTypes,
+		DependencyIndexes: file_employee_service_requests_attendance_rpc_delete_attendance_proto_depIdxs,
+		MessageInfos:      file_employee_service_requests_attendance_rpc_delete_attendance_proto_msgTypes,
+	}.Build()
+	File_employee_service_requests_attendance_rpc_delete_attendance_proto = out.File
+	file_employee_service_requests_attendance_rpc_delete_attendance_proto_goTypes = nil
+	file_employee_service_requests_attendance_rpc_delete_attendance_proto_depIdxs = nil
+}
