# shared/proto/employee-service/requests/attendance/rpc_get_attendance.pb.go
@@ -1,0 +1,174 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.6
+// 	protoc        v4.25.3
+// source: employee-service/requests/attendance/rpc_get_attendance.proto
+
+package attendance
+
+import (
+	models "github.com/nicodanke/gesty-api/shared/proto/employee-service/models"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type GetAttendanceRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Id            string                 `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetAttendanceRequest) Reset() {
+	*x = GetAttendanceRequest{}
+	mi := &file_employee_service_requests_attendance_rpc_get_attendance_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetAttendanceRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetAttendanceRequest) ProtoMessage() {}
+
+func (x *GetAttendanceRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_employee_service_requests_attendance_rpc_get_attendance_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetAttendanceRequest.ProtoReflect.Descriptor instead.
+func (*GetAttendanceRequest) Descriptor() ([]byte, []int) {
+	return file_employee_service_requests_attendance_rpc_get_attendance_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *GetAttendanceRequest) GetId() string {
+	if x != nil {
+		return x.Id
+	}
+	return ""
+}
+
+type GetAttendanceResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Attendance    *models.Attendance     `protobuf:"bytes,1,opt,name=attendance,proto3" json:"attendance,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetAttendanceResponse) Reset() {
+	*x = GetAttendanceResponse{}
+	mi := &file_employee_service_requests_attendance_rpc_get_attendance_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetAttendanceResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetAttendanceResponse) ProtoMessage() {}
+
+func (x *GetAttendanceResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_employee_service_requests_attendance_rpc_get_attendance_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetAttendanceResponse.ProtoReflect.Descriptor instead.
+func (*GetAttendanceResponse) Descriptor() ([]byte, []int) {
+	return file_employee_service_requests_attendance_rpc_get_attendance_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *GetAttendanceResponse) GetAttendance() *models.Attendance {
+	if x != nil {
+		return x.Attendance
+	}
+	return nil
+}
+
+var File_employee_service_requests_attendance_rpc_get_attendance_proto protoreflect.FileDescriptor
+
+const file_employee_service_requests_attendance_rpc_get_attendance_proto_rawDesc = "" +
+	"\n" +
+	"=employee-service/requests/attendance/rpc_get_attendance.proto\x123employee_service.requests.attendance.get_attendance\x1a(employee-service/models/attendance.proto\"&\n" +
+	"\x14GetAttendanceRequest\x12\x0e\n" +
+	"\x02id\x18\x01 \x01(\tR\x02id\"g\n" +
+	"\x15GetAttendanceResponse\x12N\n" +
+	"\n" +
+	"attendance\x18\x01 \x01(\v2..employee_service.models.attendance.AttendanceR\n" +
+	"attendanceBRZPgithub.com/nicodanke/gesty-api/shared/proto/employee-service/requests/attendanceb\x06proto3"
+
+var (
+	file_employee_service_requests_attendance_rpc_get_attendance_proto_rawDescOnce sync.Once
+	file_employee_service_requests_attendance_rpc_get_attendance_proto_rawDescData []byte
+)
+
+func file_employee_service_requests_attendance_rpc_get_attendance_proto_rawDescGZIP() []byte {
+	file_employee_service_requests_attendance_rpc_get_attendance_proto_rawDescOnce.Do(func() {
+		file_employee_service_requests_attendance_rpc_get_attendance_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_employee_service_requests_attendance_rpc_get_attendance_proto_rawDesc), len(file_employee_service_requests_attendance_rpc_get_attendance_proto_rawDesc)))
+	})
+	return file_employee_service_requests_attendance_rpc_get_attendance_proto_rawDescData
+}
+
+var file_employee_service_requests_attendance_rpc_get_attendance_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_employee_service_requests_attendance_rpc_get_attendance_proto_goTypes = []any{
+	(*GetAttendanceRequest)(nil),  // 0: employee_service.requests.attendance.get_attendance.GetAttendanceRequest
+	(*GetAttendanceResponse)(nil), // 1: employee_service.requests.attendance.get_attendance.GetAttendanceResponse
+	(*models.Attendance)(nil),     // 2: employee_service.models.attendance.Attendance
+}
+var file_employee_service_requests_attendance_rpc_get_attendance_proto_depIdxs = []int32{
+	2, // 0: employee_service.requests.attendance.get_attendance.GetAttendanceResponse.attendance:type_name -> employee_service.models.attendance.Attendance
+	1, // [1:1] is the sub-list for method output_type
+	1, // [1:1] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_employee_service_requests_attendance_rpc_get_attendance_proto_init() }
+func file_employee_service_requests_attendance_rpc_get_attendance_proto_init() {
+	if File_employee_service_requests_attendance_rpc_get_attendance_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_employee_service_requests_attendance_rpc_get_attendance_proto_rawDesc), len(file_employee_service_requests_attendance_rpc_get_attendance_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_employee_service_requests_attendance_rpc_get_attendance_proto_goTypes,
+		DependencyIndexes: file_employee_service_requests_attendance_rpc_get_attendance_proto_depIdxs,
+		MessageInfos:      file_employee_service_requests_attendance_rpc_get_attendance_proto_msgTypes,
+	}.Build()
+	File_employee_service_requests_attendance_rpc_get_attendance_proto = out.File
+	file_employee_service_requests_attendance_rpc_get_attendance_proto_goTypes = nil
+	file_employee_service_requests_attendance_rpc_get_attendance_proto_depIdxs = nil
+}
