# shared/proto/employee-service/requests/attendance/rpc_mark_attendance.pb.go
@@ -1,0 +1,187 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.6
+// 	protoc        v4.25.3
+// source: employee-service/requests/attendance/rpc_mark_attendance.proto
+
+package attendance
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type MarkAttendanceRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	DeviceId      int64                  `protobuf:"varint,1,opt,name=deviceId,proto3" json:"deviceId,omitempty"`
+	ActionId      int64                  `protobuf:"varint,2,opt,name=actionId,proto3" json:"actionId,omitempty"`
+	ImageBase64   string                 `protobuf:"bytes,3,opt,name=imageBase64,proto3" json:"imageBase64,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *MarkAttendanceRequest) Reset() {
+	*x = MarkAttendanceRequest{}
+	mi := &file_employee_service_requests_attendance_rpc_mark_attendance_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *MarkAttendanceRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*MarkAttendanceRequest) ProtoMessage() {}
+
+func (x *MarkAttendanceRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_employee_service_requests_attendance_rpc_mark_attendance_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use MarkAttendanceRequest.ProtoReflect.Descriptor instead.
+func (*MarkAttendanceRequest) Descriptor() ([]byte, []int) {
+	return file_employee_service_requests_attendance_rpc_mark_attendance_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *MarkAttendanceRequest) GetDeviceId() int64 {
+	if x != nil {
+		return x.DeviceId
+	}
+	return 0
+}
+
+func (x *MarkAttendanceRequest) GetActionId() int64 {
+	if x != nil {
+		return x.ActionId
+	}
+	return 0
+}
+
+func (x *MarkAttendanceRequest) GetImageBase64() string {
+	if x != nil {
+		return x.ImageBase64
+	}
+	return ""
+}
+
+type MarkAttendanceResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	EmployeeName  string                 `protobuf:"bytes,1,opt,name=employeeName,proto3" json:"employeeName,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *MarkAttendanceResponse) Reset() {
+	*x = MarkAttendanceResponse{}
+	mi := &file_employee_service_requests_attendance_rpc_mark_attendance_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *MarkAttendanceResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*MarkAttendanceResponse) ProtoMessage() {}
+
+func (x *MarkAttendanceResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_employee_service_requests_attendance_rpc_mark_attendance_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use MarkAttendanceResponse.ProtoReflect.Descriptor instead.
+func (*MarkAttendanceResponse) Descriptor() ([]byte, []int) {
+	return file_employee_service_requests_attendance_rpc_mark_attendance_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *MarkAttendanceResponse) GetEmployeeName() string {
+	if x != nil {
+		return x.EmployeeName
+	}
+	return ""
+}
+
+var File_employee_service_requests_attendance_rpc_mark_attendance_proto protoreflect.FileDescriptor
+
+const file_employee_service_requests_attendance_rpc_mark_attendance_proto_rawDesc = "" +
+	"\n" +
+	">employee-service/requests/attendance/rpc_mark_attendance.proto\x124employee_service.requests.attendance.mark_attendance\"q\n" +
+	"\x15MarkAttendanceRequest\x12\x1a\n" +
+	"\bdeviceId\x18\x01 \x01(\x03R\bdeviceId\x12\x1a\n" +
+	"\bactionId\x18\x02 \x01(\x03R\bactionId\x12 \n" +
+	"\vimageBase64\x18\x03 \x01(\tR\vimageBase64\"<\n" +
+	"\x16MarkAttendanceResponse\x12\"\n" +
+	"\femployeeName\x18\x01 \x01(\tR\femployeeNameBRZPgithub.com/nicodanke/gesty-api/shared/proto/employee-service/requests/attendanceb\x06proto3"
+
+var (
+	file_employee_service_requests_attendance_rpc_mark_attendance_proto_rawDescOnce sync.Once
+	file_employee_service_requests_attendance_rpc_mark_attendance_proto_rawDescData []byte
+)
+
+func file_employee_service_requests_attendance_rpc_mark_attendance_proto_rawDescGZIP() []byte {
+	file_employee_service_requests_attendance_rpc_mark_attendance_proto_rawDescOnce.Do(func() {
+		file_employee_service_requests_attendance_rpc_mark_attendance_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_employee_service_requests_attendance_rpc_mark_attendance_proto_rawDesc), len(file_employee_service_requests_attendance_rpc_mark_attendance_proto_rawDesc)))
+	})
+	return file_employee_service_requests_attendance_rpc_mark_attendance_proto_rawDescData
+}
+
+var file_employee_service_requests_attendance_rpc_mark_attendance_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_employee_service_requests_attendance_rpc_mark_attendance_proto_goTypes = []any{
+	(*MarkAttendanceRequest)(nil),  // 0: employee_service.requests.attendance.mark_attendance.MarkAttendanceRequest
+	(*MarkAttendanceResponse)(nil), // 1: employee_service.requests.attendance.mark_attendance.MarkAttendanceResponse
+}
+var file_employee_service_requests_attendance_rpc_mark_attendance_proto_depIdxs = []int32{
+	0, // [0:0] is the sub-list for method output_type
+	0, // [0:0] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_employee_service_requests_attendance_rpc_mark_attendance_proto_init() }
+func file_employee_service_requests_attendance_rpc_mark_attendance_proto_init() {
+	if File_employee_service_requests_attendance_rpc_mark_attendance_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_employee_service_requests_attendance_rpc_mark_attendance_proto_rawDesc), len(file_employee_service_requests_attendance_rpc_mark_attendance_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_employee_service_requests_attendance_rpc_mark_attendance_proto_goTypes,
+		DependencyIndexes: file_employee_service_requests_attendance_rpc_mark_attendance_proto_depIdxs,
+		MessageInfos:      file_employee_service_requests_attendance_rpc_mark_attendance_proto_msgTypes,
+	}.Build()
+	File_employee_service_requests_attendance_rpc_mark_attendance_proto = out.File
+	file_employee_service_requests_attendance_rpc_mark_attendance_proto_goTypes = nil
+	file_employee_service_requests_attendance_rpc_mark_attendance_proto_depIdxs = nil
+}
